# ChatApp

./: .env.example  .gitignore  Cargo.toml  README.md  api_out.txt
.cargo/: config.toml
.sqlx/: query-0b7586625a1ab67d8f3fc5948956fae726d2e69641a3d29f6cbeb85fd08d3db6.json  query-0ea380ea70ecb9b584f1ae38adbd6141d4c3db9b24022c8057bb2b0d6bb75219.json  query-0ed86d732a8ab1bde85b2439f9102f924c70b11dfe90734b67088b1c39acbeb0.json  query-18414c893c73f4e3a1295cbb19d548d21f286aac070b60ecdc8b79905faf499a.json  query-1a8f31e28f78a149022b74088c5d57a2c4e4d5bf92b476fbf89ed49e38735633.json  query-1d747ea9e0732948f919db8ed856b1d85310ca629dea0f582b0d4a8f77557bb7.json  query-1dd487c99deb77c256c4f5808646b6798cf9ee396502f11baf22d845140dc6d4.json  query-1e44b1c7094951c13df1eb382c58836d7dd0c43f32ca2d8fe55439364e0694d8.json  query-2036b6832414791dc7ea2ab1abb449a7665ac55061c5b0fefc49a8bc106cbe3e.json  query-24eccc1344519b8f9b30b940d958fc22c1a43740f4ff0f88992718b41d411ba5.json  query-2aa0aff1b3c6874f8f7edd3e3aff289003c5338abbe8368570c922781ca0bd4e.json  query-332ac935806631e909fd38e497185aef02fef80f244df288c4db8f6401f22dec.json  query-335d91dc2eadf96be4d091df81979d1d5a077a715e6dff88ed7bd76967e56888.json  query-415b535c1ae57fff5c5ce704aaa2616722b86efef31c77f9a9b0b0da57452028.json  query-4e6f1c72245c41528b86f78e02c39f8282a8d12ca75bd23451804ae823c230eb.json  query-531f30819cc9ccd256f9cbc02d3a38b7291e280a62e030a55f1d6395adee894b.json  query-5a26c9f7f89990ef9dac0f4fec99402e0c4414f187d1c1383b46c01d8ae66b59.json  query-66b1dcdcbc9eae32237b1f712c32498003efb42d843b5bb7d33668d5cc3199a7.json  query-67d69fd96f2b5ff67562ea509e687a973b00a2c517fb894d8a3ddd96778003fa.json  query-714a09cbd03f837876c25bf3c7b6559775ce3ed3553479e7321fe56af79303c9.json  query-77271fb8104a43e7018c641fe0614a337e8d5d80c8cee02c31806c26950049e5.json  query-7f558a79679c35fa09e69cf887b63533b8fe98cc038b91caa1a53fbb28c082e2.json  query-89ab2b1bb6c41d375a0e072f64094d11476b26794e8a0d80a4c78900cc00e5df.json  query-8ad504ef5319679ddc1443dc269655d404baca4263856fb0b889bcfac20c7971.json  query-8e45a61f1a1aaa8e727a645e7897fce6c0fbb67b12fd745760444cd9ad6f0219.json  query-9612f5ecd1527583552ed36b411c6437cbbd4572d47d2bc47379ba3a3d632a43.json  query-a1c09116d685ba06b1d0f9bb026ef771c4a0ff4291e89e4223374979533f7b86.json  query-a49c9a466d3845976e8ab700da2b8a02d7cce7cfdc358a02f9c1a155fd33d4d5.json  query-ac5bf159a72fede90565fe5dc33b4abe107eb08b0e4af1df8689432e6877b66c.json  query-bc82661c21697a028f841e24752eb16e0c8738f86721850fb50a4628cdd32ecb.json  query-d4a7c00846e9b0807e6e71b731bdf823b585ae887adc620d11cba8a02f89a977.json  query-d56cb19e0709f108aaecf0d94ed1f2cc4da9d646d534b70a280484d4d1d15826.json  query-debd0fca4b342c0c98f92dcc7d80faf8ca41b2b8f6536b4af7e95d357c004db1.json  (+3 more)
apps/cli/: Cargo.toml
apps/cli/src/: api.rs  main.rs
crates/crypto_core/: Cargo.toml
crates/crypto_core/src/: lib.rs
services/api/: Cargo.toml
services/api/src/: config.rs  error.rs  extract.rs  main.rs  state.rs
services/api/src/routes/: auth.rs  channels.rs  devices.rs  messages.rs  mod.rs  profiles.rs  servers.rs  users.rs
(+59 files in other folders)
