[package]
name = "chat"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

crypto_core = { path = "../../crates/crypto_core" }
protocol = { path = "../../crates/protocol" }

# Blocking HTTP client — no async runtime needed in the CLI.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Hidden password input
rpassword = "7"
