[package]
name = "crypto_core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
base64 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
